compiler/acton/test/syntaxerrors/err2.act
def f(x):
    actor a():
        pass
    return 2+x